@@ -7,6 +7,7 @@ namespace Nexendrie\BookComponent;
  * @author Jakub Konečný
  * @property-read string $slug
  * @property-read string $title
+ * @property-read bool $allowed
  */
 class BookPage {
   use \Nette\SmartObject;
@@ -14,6 +15,8 @@ class BookPage {
   protected $slug;
   /** @var string */
   protected $title;
+  /** @var array of [IBookPageCondition, string] */
+  protected $conditions = [];
   
   public function __construct(string $slug, string $title) {
     $this->slug = $slug;
@@ -26,6 +29,22 @@ class BookPage {
   
   public function getTitle(): string {
     return $this->title;
+  }
+  
+  /**
+   * @param mixed $parameter
+   */
+  public function addCondition(IBookPageCondition $condition, $parameter): void {
+    $this->conditions[] = [$condition, $parameter];
+  }
+  
+  public function isAllowed(): bool {
+    foreach($this->conditions as $condition) {
+      if(!$condition[0]->isAllowed($condition[1])) {
+        return false;
+      }
+    }
+    return true;
   }
 }
 ?>
