@@ -1,0 +1,28 @@
+<?php
+declare(strict_types=1);
+
+namespace Nexendrie\BookComponent;
+
+/**
+ * ConditionCallback
+ *
+ * @author Jakub Konečný
+ */
+final class ConditionCallback implements IBookPageCondition {
+  /**
+   * @param callable $parameter
+   * @throws \InvalidArgumentException
+   * @throws \UnexpectedValueException
+   */
+  public function isAllowed($parameter = NULL): bool {
+    if(!is_callable($parameter)) {
+      throw new \InvalidArgumentException("Method " . __METHOD__ . " expects callback as parameter.");
+    }
+    $result = call_user_func($parameter);
+    if(!is_bool($result)) {
+      throw new \UnexpectedValueException("The callback for method " . __METHOD__ . " has to return boolean, " . gettype($result) . " returned.");
+    }
+    return $result;
+  }
+}
+?>
