@@ -1,6 +1,6 @@
   <h1>{_"book.content"}</h1>
   <ol id="bookPages">
-    {foreach $pages as $page}
+    {foreach $pages->getAllowedItems() as $page}
     <li><a href="{plink "{$presenterName}:", page => $page->slug}">{$page->title}</a></li>
     {/foreach}
   </ol>
