@@ -1,0 +1,40 @@
+<?php
+declare(strict_types=1);
+
+namespace Nexendrie\BookComponent;
+
+use Tester\Assert;
+
+require __DIR__ . "/../../bootstrap.php";
+
+final class ConditionCallbackTest extends \Tester\TestCase {
+  use \Testbench\TCompiledContainer;
+  
+  /** @var ConditionCallback */
+  protected $condition;
+  
+  public function setUp() {
+    $this->condition = $this->getService(ConditionCallback::class);
+  }
+  
+  public function testIsAllowed() {
+    Assert::exception(function() {
+      $this->condition->isAllowed(NULL);
+    }, \InvalidArgumentException::class);
+    Assert::exception(function() {
+      $this->condition->isAllowed(function() {
+        return NULL;
+      });
+    }, \UnexpectedValueException::class);
+    Assert::true($this->condition->isAllowed(function() {
+      return true;
+    }));
+    Assert::false($this->condition->isAllowed(function() {
+      return false;
+    }));
+  }
+}
+
+$test = new ConditionCallbackTest;
+$test->run();
+?>
